--- a/templates/secret_santa.html
+++ b/templates/secret_santa.html
@@ -4,11 +4,18 @@
 
 
 {% block content %}
-{% for group, gift in g %}
-<h1>{{ group }}</h1>
+{% for group, data in g %}
+<h1>{{ group.group }}</h1>
 <p class="text-center">
+{% if group.closed %}
 <span class="text-muted">Tu as gagné le droit d’offrir un cadeau à…</span><br>
-<span class="text-important">{{ gift }}</span> !
+<span class="text-important">{{ data }}</span> !
+{% else %}
+<span class="text-muted">Ce groupe n’est pas encore totalement constitué. Pour l’instant, il est composé de:</span><br>
+<ul>{% for user in data %}<li>{{ user }}</li>{% endfor %}</ul>
+{% endif %}
 </p>
+{% empty %}
+<p>Aucun Secret Santa en cours…</p>
 {% endfor %}
 {% endblock %}
