noms complets des gens

--- a/templates/secret_santa.html
+++ b/templates/secret_santa.html
@@ -9,10 +9,10 @@
 <p class="text-center">
 {% if group.closed %}
 <span class="text-muted">Tu as gagné le droit d’offrir un cadeau à…</span><br>
-<span class="text-important">{{ data }}</span> !
+<span class="text-important">{{ data }} ({{ data.first_name }} {{data.last_name}})</span> !
 {% else %}
 <span class="text-muted">Ce groupe n’est pas encore totalement constitué. Pour l’instant, il est composé de:</span><br>
-<ul>{% for user in data %}<li>{{ user }}</li>{% endfor %}</ul>
+<ul>{% for user in data %}<li>{{ user }} ({{ user.first_name}} {{ user.last_name }})</li>{% endfor %}</ul>
 {% endif %}
 </p>
 {% empty %}
